--- a/app/assets/stylesheets/modules/_notifications.scss
+++ b/app/assets/stylesheets/modules/_notifications.scss
@@ -19,6 +19,7 @@
 .notifications-menu {
    min-width:420px;
    color: $dark-color;
+   background-color: $white !important;
 }
 
 .notifications-wrapper {
